--- a/product.html
+++ b/product.html
@@ -49,10 +49,14 @@
               <div
                 class="d-flex justify-content-start align-items-center my-3 products__buttons"
               >
-                <button class="btn btn-success me-2 my-1 product__button">
+                <button
+                  class="btn btn-success me-2 my-1 product__button cart-button"
+                >
                   Add To Cart
                 </button>
-                <button class="btn btn-primary my-1 mx-2 product__button">
+                <button
+                  class="btn btn-primary my-1 mx-2 product__button wish-button"
+                >
                   Add To Wishlist
                 </button>
               </div>
