--- a/wish.html
+++ b/wish.html
@@ -18,10 +18,32 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <div id="navigation-placeholder"></div>
-  <div id="footer-placeholder"></div>
-
   <body>
+    <main class="wish">
+      <div id="navigation-placeholder"></div>
+      <section class="py-4 bg-body-bg wish">
+        <div class="container">
+          <div class="wish__cards">
+            <div
+              class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 mt-2 mb-4 wish__products"
+            ></div>
+            <table class="table table-striped wish__products">
+              <thead class="wish__head">
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Product Name</th>
+                  <th scope="col">Price</th>
+                  <th scope="col " class="text-center">Action</th>
+                </tr>
+              </thead>
+              <tbody class="wish__content"></tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+      <div id="footer-placeholder"></div>
+    </main>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
