--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <main class="cart">
+    <main class="cart overflow-hidden">
       <div id="navigation-placeholder"></div>
       <section class="py-4 bg-body-bg cart">
         <div class="container">
