--- a/product.html
+++ b/product.html
@@ -48,18 +48,7 @@
               <p class="card-text text-danger singleProduct__price"></p>
               <div
                 class="d-flex justify-content-start align-items-center my-3 products__buttons"
-              >
-                <button
-                  class="btn btn-success me-2 my-1 product__button cart-button"
-                >
-                  Add To Cart
-                </button>
-                <button
-                  class="btn btn-primary my-1 mx-2 product__button wish-button"
-                >
-                  Add To Wishlist
-                </button>
-              </div>
+              ></div>
               <p class="card-text">
                 <small class="text-body-secondary"
                   >Last updated 3 days ago</small
