--- a/cart.html
+++ b/cart.html
@@ -38,9 +38,7 @@
               <tfoot>
                 <tr class="table-secondary">
                   <td colspan=" 2" class="fw-bold">Total</td>
-                  <td colspan="1" class="fw-bolder cart__price">
-                    $<span class="cart__total-Price">0</span>
-                  </td>
+                  <td colspan="1" class="fw-bolder cart__price">$ 0</td>
                   <td colspan="2" class="text-center">
                     <button
                       type="button"
